manifests/portainer/portainer-svc-ingressroute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  selector:
    app.kubernetes.io/name: portainer
  ports:
  - name: http
    targetPort: 9000
    port: 9000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.portainer.local.example.com`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
    - match: Host(`portainer.local.example.com`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
  tls:
    secretName: local-example-com-tls
